--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,7 +39,12 @@
 					<img src="images/{{image}}" alt="Lorem Pixel image" class="img">
 					<p>{{name}}</p>
 				</a>
-				<div class="details"></div>
+
+				<div class="details">
+					
+					
+
+				</div>
 			</div>
 		</div>
 		{{/each}}
